--- a/codequiz-server/quiz/templates/tasks/line_input.html
+++ b/codequiz-server/quiz/templates/tasks/line_input.html
@@ -4,7 +4,7 @@
 
             <div class="cell">
                     <label>Antwort:
-                        <input name="le{{ li_id }}" type="text" size="10"
+                        <input name="le_idx_{{idx}}" type="text" size="10"
                                 value="{{ user_solution }}" autocomplete="off">
                     </label>
             
