--- a/codequiz-server/quiz/templates/tasks/task_buttons1.html
+++ b/codequiz-server/quiz/templates/tasks/task_buttons1.html
@@ -1,8 +1,8 @@
 <!-- ==> start: task_buttons1.html -->
 {% if button_type == "next" %}
-<input type="submit" name="{{button_type}}" value="Next" />
+<input type="submit" name="button_{{button_type}}" value="Next" />
 {% elif button_type == "result" %}
-<input type="submit" name="{{button_type}}" value="Result" />
+<input type="submit" name="button_{{button_type}}" value="Result" />
 {% endif %}
 
 <!-- ==> end: task_buttons1.html -->
