Adapt to JSON changes
See
https://gist.github.com/leberwurstsaft/7158911/4b5b6539ae2cee706e16ec1a5
3fa28c29d34fa86  or current revision
(https://gist.github.com/leberwurstsaft/7158911) for details

--- a/codequiz-server/builder/static/builder/style.css
+++ b/codequiz-server/builder/static/builder/style.css
@@ -58,7 +58,7 @@ a.delete {
     margin-top: 0.2em
 }
 
-textarea {
+textarea.wide {
     width:89%;
 }
 
@@ -74,9 +74,12 @@ input.source {
     font-family: monospace;
 }
 
+input.comment {
+    background-color: #a4e68e;
+}
 
 
-#sortable li.hint {
+#sortable li.comment {
     background-color: #a4e68e;
 }
 
