--- a/codequiz-server/quiz/templates/tasks/tc_run_final.html
+++ b/codequiz-server/quiz/templates/tasks/tc_run_final.html
@@ -4,9 +4,11 @@
 <link rel="stylesheet" type="text/css" href="{% static 'tasks/style2.css' %}"/>
 
 
-<div class="centered " style="width:400px">
+<div class="centered " style="width:500px">
     <h1>Congratulations!</h1>
     <p>You completed the test: "{{ tc.title }}" with {{ tc.number_of_tasks }} tasks.</p>
+    <p>To prove that you've completed it, show this receipt to your tutor:</p>
+    <p style="font-size: 18pt">{{ hash }}</p>
 
     <p>In further versions of this web application you will see some information about your results here.</p>
 </div>
