--- a/codequiz-server/quiz/templates/tasks/cq0_main.html
+++ b/codequiz-server/quiz/templates/tasks/cq0_main.html
@@ -23,6 +23,8 @@
     <link href="{{ STATIC_URL }}jquery-rating/jquery.rating.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="{{ STATIC_URL}}jquery-rating/jquery.rating.js"></script>
 
+{#  TODO: Add Font Awesome here, after merging the other branches#}
+
     {% include "feedback/header.html" %}  {# to make the feedback form ajaxy #}
     {% load mathjax %}
     {% mathjax_scripts %}
