--- a/codequiz-server/quiz/templates/tasks/cq1_task_meta.html
+++ b/codequiz-server/quiz/templates/tasks/cq1_task_meta.html
@@ -61,6 +61,8 @@
         <div class="cell">Tags:</div>
         <div class="cell"> {{ task.tags_as_string }} </div>
     </div>
+    {# this is more or less a hack, since CSS table-cell doesn't have 'colspan' #}
+    <div style="display: table-caption; caption-side: bottom"><i class="item-pencil"></i><a href="#" onclick="return false;" id="feedback_link">Send feedback for this task</a></div>
 </div>
 
 {% include "feedback/button.html" %}
