solution is checked for correctnes and the result is rendered

--- a/codequiz-server/quiz/templates/tasks/cq0_main_base.html
+++ b/codequiz-server/quiz/templates/tasks/cq0_main_base.html
@@ -17,7 +17,7 @@
 
     {# jQuery #}
     <script src="{{ STATIC_URL }}js/jquery.js" type="text/javascript"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script>
+    {#<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script> dauert zu lange#}
 
     {# part of django-generic-ratings http://django-generic-ratings.readthedocs.org#}
     <script type="text/javascript" src="{{ STATIC_URL }}jquery-rating/jquery.metadata.js"></script>
