--- a/codequiz-server/quiz/templates/tasks/line_input.html
+++ b/codequiz-server/quiz/templates/tasks/line_input.html
@@ -12,8 +12,8 @@
             </div>
             {% if print_solution %}
                 <div class="cell">
-                    <div class="{{ element.css_class }}">
-                        {{ element.print_solution }}
+                    <div class="{{ css_class }}">
+                        {{ printed_solution }}
                     </div>
                 </div>
             {% endif %}
