--- a/codequiz-server/quiz/templates/tasks/cq2_input_field.html
+++ b/codequiz-server/quiz/templates/tasks/cq2_input_field.html
@@ -1,26 +1,20 @@
 <!-- ==> start: cq2_input_field.html -->
 
-        <div class="container" style="width: 100%; padding-top: 20pt">
+        <div class="row" style="width: 100%; padding-top: 20pt">
             
-            <div class="linenumber">
-                        {{question_counter}}.
+            <div class="linenumber">{{question_counter}}.
             </div>
+            {% include "tasks/cq3_description_cells.html" with cells=text_slots %}
+
             <div class="cell">
-               {{ text_slots.0.content }}
-            </div>
-            <div class="cell">
-               {{ text_slots.1.content }}
-            </div>
-            <div class="cell">
-            
                     <textarea name="le_idx_{{idx}}" cols="20" rows="{{lines}}" autocomplete="off">{{ prefilled_text }}</textarea>
-            
             </div>
+            
             {% if print_solution %}
                 <div class="cell">
-                    <div class="{{ css_class }}">
-                        {{ printed_solution }}
-                    </div>
+                    <!--<div class="{{ css_class }}">-->
+                        <pre class="{{ css_class }}">{{ printed_solution }}</pre>
+<!--                     </div> -->
                 </div>
             {% endif %}
         
