some template cleaning up + json test task rework

--- a/codequiz-server/quiz/static/tasks/tabular_style.css
+++ b/codequiz-server/quiz/static/tasks/tabular_style.css
@@ -1,4 +1,4 @@
-div.container {
+div.table_container {
     display: table;
 }
 
@@ -10,6 +10,8 @@ div.cell {
     display: table-cell;
     padding-right: 20px;
     padding-bottom: 5px;
+    vertical-align: top;
+/*     text-align: left; */
 }
 
 div.cell p {
