--- a/codequiz-server/quiz/templates/tasks/cq0_main_simple.html
+++ b/codequiz-server/quiz/templates/tasks/cq0_main_simple.html
@@ -3,17 +3,15 @@
 
 {# This template is used to render a task independed of a task_collection #}
 
+<!-- begin cq0_main_simple.html  -->
         
         {% block main_left %}
 
-            <!-- begin cq0_main_base.html  -->
+            
             
             {% include "tasks/z_cq1_task_content.html" with mb=main_block %}
             
             
-            <!-- end cq0_main_base.html  -->
-        
-
         {% endblock main_left %}
         
         
@@ -37,4 +35,4 @@
 
     {% endblock main_right %}
 
- 
+<!-- end cq0_main_simple.html  -->
