New columnbased template (no more css-table emmulation in task-rendering)

--- a/codequiz-server/quiz/static/tasks/tabular_style.css
+++ b/codequiz-server/quiz/static/tasks/tabular_style.css
@@ -18,10 +18,10 @@ div.cell p {
     margin: 1px 1px;
 }
 
-div.linenumber {
+/*div.linenumber {
     display: table-cell;
     padding-right: 25px;
     width: 20pt;
-}
+}*/
 
 
