--- a/codequiz-server/quiz/templates/tasks/cq0_main_simple.html
+++ b/codequiz-server/quiz/templates/tasks/cq0_main_simple.html
@@ -8,7 +8,6 @@
         {% block main_left %}
 
             
-            
             {% include "tasks/z_cq1_task_content.html" with mb=main_block %}
             
             
@@ -20,8 +19,7 @@
         
             <h2>Task-Meta-Infos</h2>
        
-       
-            <div class="container">
+<!--             <div class="container"> -->
                 <div class="row">
                     <div class="cell">Title:</div>
                     <div class="cell" style="width:180px"> Task-Titel </div>
@@ -30,8 +28,8 @@
                     <div class="cell">ID:</div>
                     <div class="cell"> 100 </div>
                 </div>
-            </div>
-
+<!--             </div> -->
+            
 
     {% endblock main_right %}
 
