--- a/codequiz-server/quiz/static/tasks/style2.css
+++ b/codequiz-server/quiz/static/tasks/style2.css
@@ -1,4 +1,5 @@
 body {
+    min-width: 960px;
     margin: 0 0 30px 0px;
     padding: 0;
     background: #FFF;
@@ -62,21 +63,19 @@ img {
     top: 1px;
 }
 
-#container {
+#container_old {
     margin: 0 auto;
-    width: 1000px;
+    width: 960px;
 }
 
 #header_container {
-    width: 1000px;
+/*     width: 960px; */
     height: 70px;
     border-bottom: 2px solid #F90;
 }
 
 #header_left {
     float: left;
-    width: 300px;
-    height: 100px;
 }
 
 #header_left h1 {
@@ -84,64 +83,23 @@ img {
     padding: 0;
     font-size: 220%;
     font-weight: normal;
-    color: #0b2a51;
+    color: #F90;
+/*     color: #0b2a51; */
     /*color: #F90;*/
     letter-spacing: -1px;
 }
 
-pre {
-    background-color: #ffffcc;
-}
-
-pre.inline {
-    display: inline;
-}
-
 /*
- 
- 071c33
-0b2a51 *
-233f62
-3c5574
-4e647e
-6d7f97
-8594a8
-9daab9
-b6bfcb
-ccd6df
-e7eaee
-ffffff
-
-a4aeb8 bg
-40779e Schrift der Links
-
- 
- 
- */
-
-.css_version {
-    font-size: 50%;
-    color: #F90;
-    /*color: #FFC875;*/
-    font-weight: normal;
-}
-
 #header_left h1 span {
-    color: #8594a8;
+    color: #0b2a51;*/
+/*     color: #8594a8; */
     /*color: #FFC875;*/
-    font-weight: normal;
-}
+  /*  font-weight: normal;
+}*/
 
-#header_left h1 {
-    color: #F90;
-    /*color: #FFC875;*/
-    font-weight: normal;
-}
 
 #header_right {
     float: left;
-    width: 700px;
-    height: 100px;
 }
 
 #header_right ul {
@@ -177,46 +135,78 @@ a4aeb8 bg
     color: #6d7f97;
 }
 
-#main_container {
-    width: 1000px;
-    line-height: 160%;
-    padding: 15px 0 0 0;
-    border-bottom: 2px solid #F90;
+
+
+
+pre {
+    background-color: #ffffcc;
 }
 
-#main_container p {
-    margin: 0 15px 15px 15px;
-}
+/*pre.inline {
+    display: inline;
+}*/
 
-#main_container h2, h3 {
-    margin: 0 0 15px 0;
-    padding: 0px 15px;
-    font-size: 140%;
+/*
+ 
+ 071c33
+0b2a51 *
+233f62
+3c5574
+4e647e
+6d7f97
+8594a8
+9daab9
+b6bfcb
+ccd6df
+e7eaee
+ffffff
+
+a4aeb8 bg
+40779e Schrift der Links
+
+ 
+ 
+ */
+
+#css_version {
+    font-size: 50%;
+/*     color: #F90; */
+    color: #8594a8;
     font-weight: normal;
-    color: #0b2a51;
-    /* 	color: #F90; */
-    /* orange */
-    border-bottom: 1px solid #E5E5E5;
 }
+
 
 #color1 {
-    color: #8594a8;
+    color: #233f62;
 }
 
-#main_left {
-    float: left;
-    width: 685px;
-    padding: 0 15px 0 0;
-    font-size: 110%;
+
+#pseudo_cell {
+    vertical-align: top;
 }
+
+#input_field {
+    text-align: right;
+/*     color: #233f62; */
+}
+
+
 
 .src {
     border: 1px solid;
     border-color: #aaa;
-    padding: .5em;
+/*     padding: .5em; */
     /*     background-color:#eaeaea; */
     font-family: Fixedsys, Courier, monospace;
 }
+
+.cell_4 {
+    display: inline-block;
+    width:180px;
+    
+}
+
+
 
 .sol_right {
     border: 1px solid;
@@ -224,6 +214,7 @@ a4aeb8 bg
     padding: .5em;
     font-family: Fixedsys, Courier, monospace;
     color: #008000;
+    
 /*     font-size: 80%; */
 }
 
@@ -236,27 +227,58 @@ a4aeb8 bg
 /*     font-size: 80%; */
 }
 
+
+#main_container {
+    line-height: 160%;
+    padding: 15px 0 0 0;
+    border-bottom: 2px solid #F90;
+}
+
+
+#main_container p {
+    margin: 0 15px 15px 15px;
+}
+
+#main_container h2, h3 {
+    margin: 0 0 15px 0;
+    padding: 0px 15px;
+    font-size: 140%;
+    font-weight: normal;
+    color: #0b2a51;
+    /*  color: #F90; */
+    /* orange */
+    border-bottom: 1px solid #E5E5E5;
+}
+
+
+#main_left {
+    float: left;
+/*     padding: 0 15px 0 0; */
+    font-size: 110%;
+}
+
+
+/*
 #main_left img {
     float: left;
     border: 1px solid #CDCDCD;
     padding: 5px;
     margin: 0 15px 5px 15px;
-}
+}*/
 
 #main_right {
     float: left;
-    width: 285px;
-    padding: 0 0 0 15px;
+/*     padding: 0 0 0 15px; */
 }
 
 #bottom {
     clear: both;
-    width: 800px;
+    width: 720px;
 }
 
 #footer_container {
     float: left;
-    width: 800px;
+    width: 960px;
     height: 50px;
     color: #999;
 }
@@ -278,13 +300,13 @@ a4aeb8 bg
 
 #footer_left {
     float: left;
-    width: 300px;
+    width: 240px;
     height: 50px;
 }
 
 #footer_right {
     float: left;
-    width: 500px;
+    width: 720px;
     height: 50px;
     text-align: right;
 }
