adapted templates such that meta infos are rendered

--- a/codequiz-server/quiz/static/tasks/style2.css
+++ b/codequiz-server/quiz/static/tasks/style2.css
@@ -224,7 +224,7 @@ a4aeb8 bg
     padding: .5em;
     font-family: Fixedsys, Courier, monospace;
     color: #800000;
-/*     font-size: 80%; */
+    font-size: 90%;
 }
 
 
