--- a/codequiz-server/quiz/templates/tasks/cq0_main_simple.html
+++ b/codequiz-server/quiz/templates/tasks/cq0_main_simple.html
@@ -16,21 +16,9 @@
         
         {% block main_right %}
         
+        {% include "tasks/cq1_task_meta.html" %}
         
-            <h2>Task-Meta-Infos</h2>
-       
-<!--             <div class="container"> -->
-                <div class="row">
-                    <div class="cell">Title:</div>
-                    <div class="cell" style="width:180px"> Task-Titel </div>
-                </div>
-                <div class="row">
-                    <div class="cell">ID:</div>
-                    <div class="cell"> 100 </div>
-                </div>
-<!--             </div> -->
-            
-
+          
     {% endblock main_right %}
 
 <!-- end cq0_main_simple.html  -->
