--- a/codequiz-server/quiz/templates/tasks/cq0_main_base.html
+++ b/codequiz-server/quiz/templates/tasks/cq0_main_base.html
@@ -12,22 +12,24 @@
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     {% load staticfiles %}
-    <link rel="stylesheet" type="text/css" href="{% static 'tasks/tabular_style.css' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'tasks/960_16_col.css' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'tasks/style2.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}tasks/tabular_style.css"/>
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}tasks/960_16_col.css"/>
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}tasks/style2.css"/>
 
     {# jQuery #}
-    <script src="{{ STATIC_URL }}js/jquery.js" type="text/javascript"></script>
-    {#<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script> dauert zu lange#}
+    <script type="text/javascript" src="{{ STATIC_URL }}jquery/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}jquery/jquery-ui-1.10.3.custom.min.js"></script>
 
     {# part of django-generic-ratings http://django-generic-ratings.readthedocs.org#}
     <script type="text/javascript" src="{{ STATIC_URL }}jquery-rating/jquery.metadata.js"></script>
-    <script src="{{ STATIC_URL }}ratings/js/ratings.js" type="text/javascript"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}ratings/js/ratings.js"></script>
 
     {# part of jquery star rating plugin http://www.fyneworks.com/jquery/star-rating/ #}
-    <link href="{{ STATIC_URL }}jquery-rating/jquery.rating.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}jquery-rating/jquery.rating.css"/>
     <script type="text/javascript" src="{{ STATIC_URL}}jquery-rating/jquery.rating.js"></script>
-    
+
+{#  TODO: Add Font Awesome here, after merging the other branches#}
+
     {% include "feedback/header.html" %}  {# to make the feedback form ajaxy #}
     {% load mathjax %}
     {% mathjax_scripts %}
@@ -57,7 +59,7 @@
 
         <div id="main_container">
             
-            <div class="grid_12" id="main_left">
+            <div class="grid_13" id="main_left">
             
                 {% block main_left %}
 
@@ -70,7 +72,7 @@
             <!-- End of main_left -->
 
             
-            <div class="grid_4" id="main_right">
+            <div class="grid_3" id="main_right">
             
             
             {% block main_right %}
