--- a/codequiz-server/quiz/templates/tasks/cq2_input_field.html
+++ b/codequiz-server/quiz/templates/tasks/cq2_input_field.html
@@ -1,34 +1,29 @@
 <!-- ==> start: cq2_input_field.html -->
 
-<!--         <div class="row" style="width: 100%; padding-top: 20pt"> -->
-            
-<!--             <div class="grid_1"></div> -->
-            
-            
-            <div class="grid_5 alpha" id="pseudo_cell">
-            {{question_counter}}. &nbsp; 
-                {% if text_slots.0.type == "source" %}
-                    <pre class="src">{{ text_slots.0.content }}</pre>
-                {% else %}
-                    <span class="normal">{{ text_slots.0.content }}</span>
-                {% endif %}
-            </div>
-        
-            <div class="grid_4" id="input_field">
-                    <textarea name="le_idx_{{idx}}" cols="27" rows="{{lines}}" autocomplete="off">{{ prefilled_text }}</textarea>
-            </div>
-            
-            <div class="grid_4 omega" id="pseudo_cell">
-            {% if print_solution %}
-                    <pre class="{{ css_class }}">{{ printed_solution }}</pre>
-                {% else %}
-                &nbsp;
-            
-            {% endif %}
-            </div>
+<div class="grid_5 alpha" id="pseudo_cell">
+    {{ question_counter }}. &nbsp;
+    {% if text_slots.0.type == "source" %}
+        <pre class="src">{{ text_slots.0.content }}</pre>
+    {% else %}
+        <span class="normal">{{ text_slots.0.content }}</span>
+    {% endif %}
+</div>
 
-            <div class="clear">
-            </div>
-        
+<div class="grid_4" id="input_field">
+    <textarea class="disablecopypaste" name="le_idx_{{ idx }}" cols="27" rows="{{ lines }}"
+              autocomplete="off">{{ prefilled_text }}</textarea>
+</div>
+
+<div class="grid_4 omega" id="pseudo_cell">
+    {% if print_solution %}
+        <pre class="{{ css_class }}">{{ printed_solution }}</pre>
+    {% else %}
+        &nbsp;
+    {% endif %}
+</div>
+
+<div class="clear">
+</div>
+
 
 <!-- ==> end: cq2_input_field.html -->
