--- a/codequiz-server/quiz/templates/tasks/z_cq1_task_content.html
+++ b/codequiz-server/quiz/templates/tasks/z_cq1_task_content.html
@@ -1,38 +1,41 @@
 <!-- content of one single task  -->
 
 {# This debug stuff should be removed with version 0.4 (xml dismissed) #}
-{% if mb.debug_flag %}
 
-<form action="{% url 'quiz_ns:debug_task_process' %}" method="post" autocomplete="off">
+<form action="
+        {% if mb.debug_flag %}
+        {% url 'quiz_ns:debug_task_process' %}
+        {% else %}
+        {% url 'quiz_ns:task_form_process' mb.task.id %}
+        {% endif %}"
+      method="post" autocomplete="off">
 
-{% else %}
+    <!-- protect against cross site reference forgery -->
+    {% csrf_token %}
 
-<form action="{% url 'quiz_ns:task_form_process' mb.task.id %}" method="post" autocomplete="off">
+    <input type="hidden" name="meta_task_id" value="{{ mb.task.id }}">
+    <input type="hidden" name="meta_tc_id" value="{{ mb.tc_id }}">
+    <input type="hidden" name="meta_tc_task_id" value="{{ mb.tc_task_id }}">
 
-{% endif %}
+    <h2><span id="color1">Task:</span> "{{ mb.task.title }}"</h2>
 
-        <!-- protect against cross site reference forgery -->
-        {% csrf_token %}
+    {% for s in mb.html_strings %}
+        {{ s|safe }}
+        <div class="clear"></div>
+    {% endfor %}
 
-        <input type="hidden" name="meta_task_id" value="{{ mb.task.id }}">
-        <input type="hidden" name="meta_tc_id" value="{{ mb.tc_id }}">
-        <input type="hidden" name="meta_tc_task_id" value="{{ mb.tc_task_id }}">
-
-        <h2><span id="color1">Task:</span> "{{ mb.task.title }}"</h2>
-
-            {% for s in mb.html_strings %}
-                {{ s|safe }}
-                <div class="clear"></div>
-            {% endfor %}
-
-        <!-- Buttons: -->
-        <span style="display: block; text-align: right;">
+    <!-- Buttons: -->
+    <span style="display: block; text-align: right;">
         {% for bs in mb.button_strings %}
-
             {{ bs|safe }}
-
         {% endfor %}
-        </span>
-        <br/>
-
+    </span>
 </form>
+
+<script type="application/javascript" charset="utf-8">
+    $(document).ready(function () {
+        $('textarea.disablecopypaste').bind('copy paste', function (e) {
+            e.preventDefault();
+        });
+    });
+</script>
