Rename some variable to be more clear
More clean up in templates, allow for specific buttons in task view (useful for explicit task view)

--- a/codequiz-server/quiz/templates/tasks/src.html
+++ b/codequiz-server/quiz/templates/tasks/src.html
@@ -1,7 +1,11 @@
 <!-- ==> start: src.html -->
 {% if multiline %}
-    <pre class="src">{{ text }}</pre>
+    <pre class="src{% if comment %} comment {% endif %}">
+        {{ text }}
+    </pre>
 {% else %}
-    <span class="src"> {{ text }} </span>
+    <span class="src{% if comment %} comment {% endif %}">
+        {{ text }}
+    </span>
 {% endif %}
 <!-- ==> end: src.html -->
