--- a/codequiz-server/quiz/templates/tasks/txt.html
+++ b/codequiz-server/quiz/templates/tasks/txt.html
@@ -1,5 +1,13 @@
 <!-- ==> start: txt.html -->
 
-<p>{{text|safe}}</p>
+{% if comment %}
+    <div class="comment">
+{% endif %}
+
+<p>{{ text|safe }}</p>
+
+{% if comment %}
+    </div>
+{% endif %}
 
 <!-- ==> end: txt.html -->
